# vantablock

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  flake.nix  justfile  readme.md  release-please-config.json  release-plz.toml  treefmt.nix
crates/client/: Cargo.toml  build.rs  readme.md
crates/client/benches/: generation_benchmarks.rs  meshing_benchmarks.rs
crates/client/src/: lib.rs  main.rs  prelude.rs  settings.rs
crates/client/src/input/: input_maps.rs  local_actions.rs  mod.rs
crates/client/src/input/resources/: action.rs  cursor_movement.rs  input_action_map.rs  mod.rs
crates/client/src/lifecycle/: mod.rs
crates/client/src/lifecycle/load/: chunk_loading.rs  loading_phases.rs  mod.rs  phases.rs  registries.rs
crates/client/src/lifecycle/scheduling/: mod.rs  sets.rs
crates/client/src/lifecycle/state/: enums.rs  mod.rs
crates/client/src/load/: mod.rs  registries.rs
crates/client/src/network/: local_connection.rs  message_handler.rs  messages.rs  mod.rs  resources.rs
crates/client/src/network/connection/: initiate.rs  mod.rs  perform_connection.rs  resources.rs  session.rs
crates/client/src/network/graphics/: mod.rs  smoothing.rs
crates/client/src/network/ingress/: handle_welcome.rs  message_handler.rs  mod.rs
crates/client/src/network/receive/: demultiplex.rs  ecs_messages.rs  mod.rs
crates/client/src/network/send/: mod.rs
crates/client/src/player/: components.rs  events.rs  mod.rs  replicated_player.rs  targeted_block.rs
crates/client/src/player/camera/: mod.rs  movement.rs  spawn.rs
crates/client/src/player/systems/: block_actions.rs  mod.rs  setup_replicated_players.rs  update_target_block.rs  update_target_voxel.rs  voxel_actions.rs  welcome.rs
crates/client/src/render/: mod.rs  scheduling.rs
crates/client/src/render/block/: meshing.rs  mod.rs  plugin.rs  registry.rs  render_data.rs
crates/client/src/render/chunk/: asset.rs  components.rs  manager.rs  mod.rs
crates/client/src/render/data/: block_meshes.rs  camera.rs  camera_phases.rs  mesh_storage.rs  mod.rs  sun.rs  time.rs  voxel_chunk_meshes.rs  voxel_meshes.rs
crates/client/src/render/global_extract/: mod.rs
crates/client/src/render/passes/: mod.rs
crates/client/src/render/pipeline/: mod.rs  shader_registry.rs
crates/client/src/render/resources/: environment_uniform.rs  mod.rs  tex_array_uniforms.rs  view_uniforms.rs  world_uniforms.rs
crates/client/src/render/texture/: load_textures.rs  mod.rs  voxel_texture_processor.rs
crates/client/src/render/textures/: error.rs  loader.rs  mod.rs
crates/client/src/render/types/: mod.rs  render_transform.rs  wireframe_vertex.rs
crates/client/src/showcase/: mod.rs  systems.rs
crates/client/src/simulation/: mod.rs
crates/client/src/simulation/input/: mod.rs
crates/client/src/simulation/showcase/: mod.rs
crates/client/src/state/: enums.rs  lifecycle.rs  mod.rs
crates/client/src/ui/: mod.rs  root.rs
crates/client/src/ui/screens/: connecting.rs  debug_menu.rs  disconnected.rs  launching_client.rs  main_menu.rs  mod.rs  settings.rs
crates/client/src/ui/systems/: camera.rs  main_menu.rs  mod.rs  spawning.rs  starting_up_ui.rs
crates/client/tools/: texture_processor.rs
crates/runner/: Cargo.toml  readme.md
crates/runner/src/: orchestrator.rs
crates/runner/tests/: integration_tests.rs  test_chunk_sync.rs
crates/runner/tests/common/: crossbeam_test_connection.rs  crossbeam_test_environment.rs  local_udp_test_environment.rs  mod.rs  networking_test_app.rs
crates/runner/tests/integration/: local_crossbeam.rs  local_udp.rs
crates/server/: CHANGELOG.md  Cargo.toml  readme.md
crates/server/benches/: generation_benchmarks.rs
crates/server/src/: lib.rs  main.rs  prelude.rs  state.rs
crates/server/src/lifecycle/: load.rs  mod.rs  state.rs
crates/server/src/lifecycle/load/: loading_phases.rs
crates/server/src/network/: mod.rs  systems.rs  types.rs
crates/server/src/network/connection/: listener.rs  mod.rs  session.rs
crates/server/src/network/ingress/: block_actions.rs  mod.rs  voxel_actions.rs
crates/server/src/network/receive/: block_actions.rs  client_message.rs  demultiplex.rs  ecs_messages.rs  mod.rs
crates/server/src/network/send/: mod.rs  sync_time.rs
crates/server/src/simulation/: chunk_loading.rs  chunk_loading_test.rs  mod.rs
crates/server/src/simulation/chunk/: components.rs  mod.rs
crates/server/src/world/: chunk_loading.rs  chunk_loading_test.rs  mod.rs
crates/server/src/world/chunk/: chunk_map.rs  components.rs  manager.rs  mod.rs
crates/server/src/world/terrain/: mod.rs
crates/server/tests/: network_sync.rs
crates/shared/: Cargo.toml  readme.md
crates/shared/src/: events.rs  lib.rs  prelude.rs
crates/shared/src/ecs_core/: config.rs  mod.rs
crates/shared/src/ecs_core/async_loading/: mod.rs
crates/shared/src/ecs_core/program_state/: app_state.rs  game_state.rs  mod.rs
crates/shared/src/lifecycle/: mod.rs  paths.rs
crates/shared/src/lifecycle/load/: components.rs  mod.rs  phases.rs
crates/shared/src/lifecycle/scheduling/: mod.rs  sets.rs
crates/shared/src/lifecycle/state/: enums.rs  lifecycle.rs  mod.rs  systems.rs
crates/shared/src/load/: mod.rs
crates/shared/src/load/components/: loading_task.rs  mod.rs
crates/shared/src/load/resources/: load_tracking.rs
crates/shared/src/load/systems/: async_task_poller.rs  fake_work_system.rs  master_loading_finalizer.rs  reset_loader_tracker.rs
crates/shared/src/network/: channel.rs  consts.rs  mod.rs  state.rs
crates/shared/src/network/protocol/: channels.rs  client.rs  components.rs  messages.rs  mod.rs  server.rs
crates/shared/src/player/: components.rs  mod.rs  movement.rs  player_action.rs
crates/shared/src/protocol/: server.rs
crates/shared/src/simulation/: app_lifecycle.rs  mod.rs  scheduling.rs
crates/shared/src/state/: enums.rs  lifecycle.rs  mod.rs
crates/shared/src/time/: frame_clock.rs  mod.rs  world_clock.rs
crates/shared/src/world/: mod.rs
crates/utils/: CHANGELOG.md  Cargo.toml  readme.md
crates/utils/src/: lib.rs  logger.rs  paths.rs  tracy_alloc.rs
(+427 files in other folders)
