[package]
name = "client"
version.workspace = true
edition.workspace = true
default-run = "client"

[package.metadata.packager]
product-name = "vantablock"
identifier = "com.masoniis.vantablock"
resources = ["../../assets", "../../readme.md"]
icons = ["../../assets/client/icon.png"]
binaries = [{ path = "client", main = true }]

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bench]]
name = "generation_benchmarks"
harness = false

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]
final_release = ["tracing/release_max_level_error"]

[build-dependencies]
wesl = { workspace = true } # shader compliation from WESL to WGSL

[dev-dependencies]
criterion = { workspace = true }

# INFO: --------------------------
#         util bin scripts
# --------------------------------

[[bin]]
name = "texture_processor"
path = "tools/texture_processor.rs"

[dependencies]
utils = { path = "../utils" }
shared = { path = "../shared" }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

# INFO: ------------------
#         graphics
# ------------------------

wesl = { workspace = true }             # preprocessor
image = { workspace = true }
bytemuck = { workspace = true }         # gpu friendly data
offset-allocator = { workspace = true } # gpu buffer allocation

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true }
rayon = { workspace = true }        # multi threaded pooling
futures-lite = { workspace = true } # future utils

# INFO: ---------------
#         utils
# ---------------------

sysinfo = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }       # serializing
rand = { workspace = true }        # rng
ron = { workspace = true }         # parsing RON files
noise = { workspace = true }       # gen random noise
crossbeam = { workspace = true }   # thread comms
glob = { workspace = true }        # reading dirs
directories = { workspace = true } # platform-specific dirs
