[package]
name = "vantablock-client"
description = "client for vantablock"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "client"
path = "src/lib.rs"

[lints]
workspace = true

[[bench]]
name = "meshing_benchmarks"
harness = false

[features]
dev = ["bevy/dev", "bevy/bevy_dev_tools"]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]
distribution = ["tracing/release_max_level_error"]

[build-dependencies]
wesl = { workspace = true } # shader compliation from WESL to WGSL

[dev-dependencies]
criterion = { workspace = true }

# INFO: --------------------------
#         util bin scripts
# --------------------------------

[[bin]]
name = "texture_processor"
path = "tools/texture_processor.rs"

[dependencies]
utils = { workspace = true }
shared = { workspace = true }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

# INFO: ------------------
#         graphics
# ------------------------

wesl = { workspace = true }             # preprocessor
image = { workspace = true }
bytemuck = { workspace = true }         # gpu friendly data
offset-allocator = { workspace = true } # gpu buffer allocation

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true, features = [
  "default_app",      # core app (input, window, state, etc)
  "default_platform", # core OS features, windowing, input, etc
  "3d_bevy_render",   # bevy 3d render pass/graph and subapp
  "ui_bevy_render",   # additional bevy ui render support
  "bevy_asset",       # asset management
  "bevy_state",       # state machines
] }
lightyear = { workspace = true, features = [
  # extra features for client
  "client",  # client plugins
  "udp",     # needed for Dedicated/LAN listening
  "netcode", # needed to manage distinct player connections
] }
futures-lite = { workspace = true } # future utils

# INFO: ---------------
#         utils
# ---------------------

sysinfo = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }       # serializing
rand = { workspace = true }        # rng
ron = { workspace = true }         # parsing RON files
noise = { workspace = true }       # gen random noise
crossbeam = { workspace = true }   # thread comms
glob = { workspace = true }        # reading dirs
directories = { workspace = true } # platform-specific dirs
