[package]
name = "vantablock-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
utils = { workspace = true }
shared = { workspace = true }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true }
lightyear = { workspace = true }
