[package]
name = "vantablock-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
utils = { workspace = true }
shared = { workspace = true }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true, features = [
  "bevy_asset", # asset management
  "bevy_state", # state machines
] }
lightyear = { workspace = true, features = [
  # extends default lightyear features in workspace
  "server",  # server plugins
  "udp",     # needed for Dedicated/LAN listening
  "netcode", # needed to manage distinct player connections
] }
