[package]
name = "vantablock-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[[bench]]
name = "generation_benchmarks"
harness = false

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }

[dependencies]
utils = { workspace = true }
shared = { workspace = true }
zstd = { workspace = true }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true, features = [
  "bevy_asset", # asset management
  "bevy_state", # state machines
] }
crossbeam = { workspace = true }
noise = { workspace = true }
lightyear = { workspace = true, features = [
  # extends default lightyear features in workspace
  "server", # server plugins
] }
