[package]
name = "shared"
description = "shared client/server logic for vantablock"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
utils = { workspace = true }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

tracing = { workspace = true }

# INFO: ------------------
#         graphics
# ------------------------

bytemuck = { workspace = true } # gpu friendly data

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true }
futures-lite = { workspace = true } # future utils

# INFO: ---------------
#         utils
# ---------------------

serde = { workspace = true }       # serializing
derive_more = { workspace = true }
noise = { workspace = true }       # gen random noise
crossbeam = { workspace = true }   # thread comms
rand = { workspace = true }        # rng
ron = { workspace = true }         # parsing RON files
