[package]
name = "vantablock-shared"
description = "shared client/server logic for vantablock"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
utils = { workspace = true }

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

tracing = { workspace = true }

# INFO: ------------------
#         graphics
# ------------------------

bytemuck = { workspace = true } # gpu friendly data

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = [
  # shared needs these for protocol definitions
  "interpolation", # smoothing intended for more pleasing visuals
  "prediction",    # for local predictions agaisnt server to get snappy feedback
] }
futures-lite = { workspace = true } # future utils

# INFO: ---------------
#         utils
# ---------------------

serde = { workspace = true }       # serializing
derive_more = { workspace = true }
noise = { workspace = true }       # gen random noise
crossbeam = { workspace = true }   # thread comms
rand = { workspace = true }        # rng
ron = { workspace = true }         # parsing RON files
zstd = { workspace = true }
