[package]
name = "utils"
version.workspace = true
edition.workspace = true

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]

[dependencies]
bevy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
sysinfo = { workspace = true }
time = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }
