[package]
name = "utils"
description = "utils for vantablock"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]

[dependencies]

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

# INFO: --------------------------
#         simulation logic
# --------------------------------

bevy = { workspace = true }

# INFO: ---------------
#         utils
# ---------------------

sysinfo = { workspace = true }
directories = { workspace = true } # platform-specific dirs
