[package]
name = "vantablock-utils"
description = "general utils for vantablock"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "utils"
path = "src/lib.rs"

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]

[dependencies]

# INFO: --------------------------------
#         logging/error handling
# --------------------------------------

time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

# INFO: ---------------
#         utils
# ---------------------

sysinfo = { workspace = true }
directories = { workspace = true } # platform-specific dirs
